--- a/style-metas.css
+++ b/style-metas.css
@@ -1,6 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap&#39;);
-
 :root {
     --cor-de-fundo: #be1111;
     --roxo: #7657ff;
@@ -71,7 +69,8 @@ body {
 
     .botao:first-child {
         border-radius: 40px 40px 0 0;
-    }}
+    }
+}
 
     @media screen and (min-width: 768px) {
         .botoes {
