--- a/style-metas.css
+++ b/style-metas.css
@@ -57,7 +57,7 @@ body {
 
 /*Aula 03*/
 
-.ativo {
+.botao.ativo {
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--roxo);
 }
