--- a/style-metas.css
+++ b/style-metas.css
@@ -1,7 +1,6 @@
-
 :root {
-    --cor-de-fundo: #be1111;
-    --roxo: #7657ff;
+    --cor-de-fundo: #000000;
+    --verde: #6FFF57;
     --branco: #FFFFFF;
     --botao-ativo: #3A375E;
     --botao-inativo: #3a375e80;
@@ -32,11 +31,11 @@ body {
 }
 
 .titulo-principal span {
-    color: var(--roxo);
+    color: var(--verde);
 }
 
 .botao {
-    font-family: "Crakra Petch", sans-serif;
+    
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -55,12 +54,12 @@ body {
     display: block;
 }
 
-/*Aula 03*/
 
 .botao.ativo {
     background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--roxo);
+    border-bottom: 4px solid var(--verde);
 }
+
 
 @media screen and (min-width: 768px) {
     .botoes {
@@ -68,20 +67,34 @@ body {
     }
 
     .botao:first-child {
-        border-radius: 40px 40px 0 0;
+        border-radius: 40px 0 0 0;
+    }
+
+    .botao:last-child {
+        border-radius: 0 40px 0 0;
     }
 }
+    .abas-textos {
+        background-color: var(--texto-fundo);
+        padding: 40px;
+        border-radius: 0 0 40px 40px;
+    }
 
-    @media screen and (min-width: 768px) {
-        .botoes {
-            display: flex;
-        }
+    .aba-conteudo.ativo {
+        display: block;
+    }
 
-        .botao:first-child {
-            border-radius: 40px 0 0 0;
-        }
+    .aba-conteudo {
+        display: none;
+    }
 
-        .botao:last-child {
-            border-radius: 0 40px 0 0;
-        }
+    .aba-conteudo-titulo-principal {
+        font-size: 28px;
+        text-align: center;
+    }
+
+    .aba-conteudo-titulo-secundario {
+        text-align: center;
+        color: var(--verde);
+        text-transform: uppercase;
     }
