--- a/style-metas.css
+++ b/style-metas.css
@@ -1,8 +1,8 @@
 :root {
-    --cor-de-fundo: #000000;
-    --verde: #6FFF57;
+    --cor-de-fundo: #9d4fb4;
+    --verde: #c655f3;
     --branco: #FFFFFF;
-    --botao-ativo: #3A375E;
+    --botao-ativo: #d498ec;
     --botao-inativo: #3a375e80;
     --texto-fundo: #3a375e4d;
 }
